<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Cheri-Paris</string>
    <string name="GPS">GPS</string>
    <string name="menu_settings">Settings</string>
    <string name="title_activity_main">Cheri-Paris</string>
    <string name="btnList">List the Sells Points</string>
    <string name="btnSettings">Settings</string>
    <string name="title_activity_settings">Settings</string>
    <string name="title_activity_list">Cheri-Paris Shops</string>
    <string name="settings">Settings</string>
    <string name="hintCity">City</string>
    <string name="lblGPS">Use the GPS</string>
    <string name="errorGPS">GPS Unavailable !</string>
    <string name="lblCity">Enter a city</string>
    <string name="btnValid">Validate</string>
    <string name="btnCancel">Cancel</string>
    <string name="btnInfo">Informations</string>
    <string name="btnInfoGPS">Locate</string>
    <string name="gpsActive">GPS Active!</string>
    <string name="gpsUnactive">GPS Unactive!</string>
    <string name="labReturn">Return</string>
    <string name="action_settings">Settings</string>
    <string name="store">Store</string>
    <string name="title_activity_shop_info">Shop Informations</string>
    <string name="hoursStore">Hours:</string>
    <string name="addressStore">Address:</string>
    <string name="phoneStore">Phone:</string>
    <string name="mailStore">Mail:</string>
    <string name="postCodeStore">Post Code:</string>
    <string name="cityStore">City:</string>
    <string name="nbStores"> Store(s) located!</string>
    <string name="notFound"> Informations not found!</string>
    <string name="title_activity_my_map">Map</string>
    <string name="satellite">Satellite unavailable</string>
    <string name="me">Me</string>
    <string name="request">Request a store here</string>
    <string name="resquestStoreOk">Request made!</string>
    <string name="requestStoreAborted">Request failed!</string>

</resources>